[gd_scene load_steps=5 format=3 uid="uid://84nqfp86crbw"]

[ext_resource type="Script" uid="uid://b4cdirp24bgdt" path="res://Interface/MainMenu/Data/main_menu.gd" id="1_fq11s"]
[ext_resource type="Texture2D" uid="uid://efj2hrky2rat" path="res://Interface/MainMenu/Art/title-text.png" id="1_s6w5q"]
[ext_resource type="Theme" uid="uid://cwfixw307k0hw" path="res://Assets/Theme/menu_theme.tres" id="2_e424c"]
[ext_resource type="Script" uid="uid://0dfotpt4v8ne" path="res://Assets/Theme/button.gd" id="4_pwfdo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fq11s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -437.0
offset_top = -368.0
offset_right = 2439.0
offset_bottom = 438.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_s6w5q")

[node name="VBoxContainer_MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.366
anchor_top = 0.487
anchor_right = 0.62
anchor_bottom = 0.812
offset_left = 0.279968
offset_top = 0.039978
offset_right = -0.400024
offset_bottom = 0.039978

[node name="Play" type="Button" parent="VBoxContainer_MainMenu"]
layout_mode = 2
theme = ExtResource("2_e424c")
text = "Play"
script = ExtResource("4_pwfdo")

[node name="Settings" type="Button" parent="VBoxContainer_MainMenu"]
layout_mode = 2
theme = ExtResource("2_e424c")
text = "Settings"
script = ExtResource("4_pwfdo")

[node name="Quit" type="Button" parent="VBoxContainer_MainMenu"]
layout_mode = 2
theme = ExtResource("2_e424c")
text = "Quit"
script = ExtResource("4_pwfdo")

[connection signal="pressed" from="VBoxContainer_MainMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer_MainMenu/Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer_MainMenu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer_MainMenu/Quit" to="." method="_on_quit_pressed"]
